--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                             <font color="white">Home</font>
                         </td>
                         <td>
-                            <font color="white">About</font>
+                            <a href="./docs/K cv.pdf" target="_blank"><font color="white">About</font></a>
                         </td>
                         <td>
-                            <font color="white">Qualification</font>
+                            <a href="./docs/K cv.pdf" target="_blank"><font color="white">Qualification</font></a>
                         </td>
                         <td>
-                            <font color="white">Skills</font>
+                            <a href="./docs/K cv.pdf" target="_blank"><font color="white">Skills</font></a>
                         </td>
                         <td>
-                            <font color="white">Projects</font>
+                            <a href="https://kingshuk1996.github.io/g3-architechts-king/" target="_blank"><font color="white">Projects</font></a>
                         </td>
                         <td>
-                            <font color="white">Contact</font>
+                            <a href="" target="_blank"><font color="white">Contact</font></a>
                         </td>
                     </tr>
                 </table>
@@ -61,7 +61,7 @@
                         </td>
                         <td width="75%">
                             <font size="6">About Me</font> <br> <br> <br>
-                            <p align="justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aspernatur delectus sint quae sequi, distinctio molestiae voluptatum velit quibusdam modi beatae praesentium doloribus maxime. Obcaecati fuga ad unde nihil sapiente?<br> <br> <br></p>
+                            <p align="justify">To work in an organization where discipline high teach environment will ensure fast career development and the congenial atmosphere will enable to develop managerial qualities, vision positive attitude interpersonal relationship, Communication skill, attitude to take challenges and commitment to achievement.<br> <br> <br></p>
                             <a href="./docs/Kingshuk C.V.docx">Download RESUME</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <a href="./docs/K cv.pdf" target="_blank">View RESUME</a>
                         </td>
@@ -223,6 +223,58 @@
                         </td>
                     </tr>
                 </table>
+            </td>
+        </tr>
+    </table>
+    <table border="0" width="100%" height="400" cellspacing="0" cellpadding="0" bgcolor="lightgray">
+        <tr>
+            <td align="center">
+                <table border="0">
+                    <tr>
+                        <td>
+                            <font size="6">CONTACT ME</font>
+                        </td>
+                    </tr>
+                </table><br>
+                <form action="#" method="post" name="frmContact" id="frmContact">
+                <table border="0" bgcolor="gray" width="20%">
+                    <tr>
+                        <td>
+                            <label for="txtUsername">Username:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" value="" name="txtUsername" id="txtUsername">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="txtEmail">Email ID:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" value="" name="txtEmail" id="txtEmail">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="txtaFeedback">Feedback:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <textarea name="txtaFeedback" id="txtaFeedback" cols="30" rows="5"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="submit" value="SUBMIT" name="" id="">
+                        </td>
+                    </tr>
+                </table>
+            </form>
             </td>
         </tr>
     </table>
